[project]
name = "dahu"
version = "0.1.0"
authors = [{ name = "Baptiste Esteban", email = "baptiste.esteban@epita.fr" }]
requires-python = ">=3.12"
dependencies = [
    "numpy==2.4.2",
]

[dependency-groups]
dev = [
    "notebook==7.5.3",
    "ruff==0.15.0",
    "matplotlib==3.10.8",
    "imageio==2.37.2",
]
